# hegemony

./: README.md
.github/workflows/: test.yaml
client/: Cargo.toml
client/assets/: tile_hexagon.glb
client/src/: dojo.rs  main.rs
contracts/: Scarb.toml
contracts/scripts/: advance_time.sh  default_auth.sh
contracts/src/: actions.cairo  lib.cairo  models.cairo
contracts/src/models/: game.cairo  position.cairo  squad.cairo
contracts/src/systems/: combat.cairo  game.cairo  game_lobby.cairo  move.cairo  spawn.cairo
contracts/src/tests/: game.cairo
contracts/src/utils/: utils.cairo
js/: bun.lockb  package.json  pnpm-lock.yaml
js/src/: App.tsx  Hex.tsx
react-app/: bun.lockb  dojoConfig.ts  index.html  package.json  pnpm-lock.yaml
react-app/src/: App.tsx  index.css
react-app/src/dojo/: createSystemCalls.ts
react-app/src/hooks/: useCommitTransaction.tsx  useGameState.tsx  useResolveMoves.tsx  useStateStore.tsx
react-app/src/store/: index.ts
react-app/src/ui/components/: Arc.tsx  Commitment.tsx  GameClock.tsx  GameTable.tsx  Hex.tsx  Three.tsx
react-app/src/ui/components/three/: Arrows.tsx  Base.tsx  BillBoard.tsx  HexagonBackground.tsx  SquadOnHex.tsx  Troop.tsx
react-app/src/ui/modules/: Commitment.tsx  MapControls.tsx
react-app/src/ui/scenes/: Game.tsx  LobbyScene.tsx
react-app/src/ui/screens/: GameLobby.tsx  GameScreen.tsx
react-app/src/utils/: hex.ts  index.ts
react-app/src/utils/commitments/: storage.ts
