[package]
edition = "2021"
name = "hegemony"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11.3"
bevy-tokio-tasks = "0.11.0"
bevy_flycam = "0.11.0"
parking_lot = "0.12.1"
starknet = "0.6.0"
tokio = { version = "1.33.0", features = ["full"] }

dojo-types = { git = "https://github.com/kariy/dojo", rev = "c7d48d2d" }
torii-client = { git = "https://github.com/kariy/dojo", rev = "c7d48d2d" }

url = "2.4.1"
